re-organize folders

--- a/2_ImGui/0_StartProject/CMakeLists.txt
+++ b/2_ImGui/0_StartProject/CMakeLists.txt
@@ -36,8 +36,8 @@ find_package(OpenGL REQUIRED)
 
 add_executable(${PROJECT_NAME}
     src/main.cpp
-    src/render.cpp
-)
+    "src/rendergui/render.cpp"
+ "src/fileexplorer/window.cpp")
 
 add_compile_definitions(NOMINMAX)
 
