Setting up plotting -> functions DrawPlot(), DrawSelection(),
Also trying to figure out Input for plotting.

--- a/2_ImGui/0_StartProject/CMakeLists.txt
+++ b/2_ImGui/0_StartProject/CMakeLists.txt
@@ -37,7 +37,7 @@ find_package(OpenGL REQUIRED)
 add_executable(${PROJECT_NAME}
     src/main.cpp
     "src/rendergui/render.cpp"
- "src/fileexplorer/window.cpp")
+ "src/fileexplorer/window.cpp" "src/plotting/plottingRender.cpp" "src/plotting/plotting.cpp")
 
 add_compile_definitions(NOMINMAX)
 
